add dockerfile and nginx conf

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3000"
   },
   "dependencies": {
     "axios": "^0.27.2",
